Manage share dropdown overlap issue with themes
https://3.basecamp.com/5798509/buckets/37939219/card_tables/cards/9567127752

--- a/public/css/buddypress-share-public.css
+++ b/public/css/buddypress-share-public.css
@@ -699,7 +699,7 @@ body.admin-bar .activity-share-modal .modal-dialog {
     pointer-events: none;
     transform: translateY(15px);
     transition: opacity 0.3s, transform 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
-    z-index: 999;
+    z-index: 99;
     overflow: hidden;
     max-height: 400px;
     overflow-y: auto;
